--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 * {
   font-family: "tanha" !important;
+  box-sizing: border-box;
 }
 
 body {
@@ -23,17 +24,19 @@ body {
   text-align: center;
   width: 100%;
   height: 10%;
-  margin-bottom: 1%;
-  padding: 12px 0;
+  margin: 0 0 10px 0;
+  padding: 0;
   background-color: rgba(0, 0, 0, 0.384);
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.37);
   color: #fff;
 }
 
 .-step-img {
+  background: #fff;
+  border: 5px solid rgba(0, 0, 0, 0.582);
   border-radius: 5px;
   width: 100%;
-  height: 85%;
+  height: 90%;
   overflow: hidden;
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.37);
 }
@@ -42,4 +45,22 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.-step-img .-img-2 {
+  background-color: #fff;
+  width: 100%;
+  height: 50%;
+}
+
+
+.step-header{
+  text-align: center;
+
+}
+
+.header{
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
