--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body {
   height: 60vh;
 }
 
+.-img-contain{
+  background-size: contain;
+  width: 100%;
+}
+
 .-step-title {
   direction: rtl;
   text-align: center;
@@ -42,7 +47,7 @@ body {
   border: 5px solid rgba(0, 0, 0, 0.582);
   border-radius: 5px;
   width: 100%;
-  height: 90%;
+  height: 100%;
   overflow: hidden;
   box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.37);
 }
